# ai-guardrails-mvp

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
assurance/: attacks.py  battery_io.py  calibration.py  corpus.py  detector.py  differential.py  evidence.py  frameworks.py  http_sut.py  oracle.py  report.py  runner.py  sut.py
common/: hashchain.py
docs/handover/: how-to-test-your-system.md
examples/: demo_endpoint.py  demo_prototype.html
sut_claims/: assistant.py  audit.py  disclosure.py  synthetic.py
tests/: test_attacks.py  test_battery_io.py  test_calibration.py  test_corpus.py  test_detector.py  test_detector_oracle.py  test_differential.py  test_evidence.py  test_frameworks.py  test_hashchain.py  test_http_sut.py  test_name_detector.py  test_oracle.py  test_report.py  test_runner.py  test_sut_adapter.py  test_sut_claims.py  test_web.py  test_web_battery.py  test_web_calibration.py  test_web_external.py
web/: app.py
web/templates/: _legend.html  _summary.html  base.html  battery.html  calibration.html  dashboard.html  evidence.html  finding_detail.html  findings.html
