[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-guardrails-mvp"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]

[tool.setuptools]
packages = ["common", "sut_claims", "assurance", "web"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore:Using .httpx. with .starlette.testclient. is deprecated"]
